--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,60 +1,60 @@
 header {
-	display: flex;
-	align-items: center;
-	padding: 21px 0px;
-	transition: all 0.5s;
-	background: transparent;
-	position: absolute;
-	z-index: 10;
-	width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 21px 0px;
+  transition: all 0.5s;
+  background: transparent;
+  position: absolute;
+  z-index: 10;
+  width: 100%;
 
-	&.fixed-top {
-		position: fixed;
-		top: 0;
-		right: 0;
-		left: 0;
-		height: 80px;
-		box-shadow: 0px 2px 20px rgb(0 0 0 / 10%);
-		background-color: var(--cyan);
-		padding: 0;
-	}
+  &.fixed-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 80px;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0 / 10%);
+    background-color: var(--black);
+    padding: 0;
+  }
 
-	.logo {
-		text-decoration: none;
-		&:hover {
-			color: var(--primary);
-			text-decoration: none;
-			transition: 0.35s all ease-in-out;
-		}
-		h1 {
-			font-size: 30px;
-			margin: 0;
-			font-weight: 600;
-			letter-spacing: 0.8px;
-			color: var(--cyan);
-		}
-	}
-	.navbar {
-		padding: 0;
-		margin: 0;
-		ul {
-			padding: 0;
-			margin: 0;
-			display: flex;
-			gap: 14px;
-			li {
-				list-style: none;
-				a {
-					text-decoration: none;
-					color: var(--cyan);
-					font-weight: 600;
-					&:hover {
-						text-decoration: none;
-						color: #bb86fc;
-						transition: 0.35s all ease-in-out;
-					}
-				}
-			}
-		}
-	}
+  .logo {
+    text-decoration: none;
+    &:hover {
+      color: var(--primary);
+      text-decoration: none;
+      transition: 0.35s all ease-in-out;
+    }
+    h1 {
+      font-size: 30px;
+      margin: 0;
+      font-weight: 600;
+      letter-spacing: 0.8px;
+      color: var(--cyan);
+    }
+  }
+  .navbar {
+    padding: 0;
+    margin: 0;
+    ul {
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: 14px;
+      li {
+        list-style: none;
+        a {
+          text-decoration: none;
+          color: var(--cyan);
+          font-weight: 600;
+          &:hover {
+            text-decoration: none;
+            color: #bb86fc;
+            transition: 0.35s all ease-in-out;
+          }
+        }
+      }
+    }
+  }
 }
