--- a/sass/pages/_login.scss
+++ b/sass/pages/_login.scss
@@ -3,83 +3,83 @@
 ------------------------*/
 
 .login {
-	height: 100vh;
-	background-color: #121212;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	color: var(--gray);
-	.input-login {
-		background-color: #101010;
-		padding: 3px 15px;
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		border-radius: 6px;
-		border: 2px solid rebeccapurple;
-		gap: 5px;
-		margin-top: 5px;
-		transition: 0.6s;
-		input {
-			border: none;
-			background-color: transparent;
-			padding: 5px 10px;
-			border: none;
-			outline: none;
-			width: 99%;
-			font-size: 16px;
-			color: var(--gray);
-		}
-		i {
-			color: var(--gray);
-		}
-		&:focus-within,
-		&:focus {
-			background-color: #8044bd0a;
-			box-shadow: 0px 0px 1px 5px #66339948;
-		}
-	}
-	.form-button {
-		background-color: var(--primary);
-		color: var(--cyan);
-		transition: 0.5s;
-		&:hover {
-			opacity: 0.8;
-			background-color: #4f2677;
-			color: var(--cyan);
-		}
-		&:focus {
-			box-shadow: 0px 0px 1px 5px #66339948;
-		}
-	}
+  height: 100vh;
+  background-color: #121212;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  color: var(--gray);
+  .input-login {
+    background-color: #101010;
+    padding: 3px 15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 6px;
+    border: 2px solid rebeccapurple;
+    gap: 5px;
+    margin-top: 5px;
+    transition: 0.6s;
+    input {
+      border: none;
+      background-color: transparent;
+      padding: 5px 10px;
+      border: none;
+      outline: none;
+      width: 99%;
+      font-size: 16px;
+      color: var(--gray);
+    }
+    i {
+      color: var(--gray);
+    }
+    &:focus-within,
+    &:focus {
+      background-color: #8044bd0a;
+      box-shadow: 0px 0px 1px 5px #66339948;
+    }
+  }
+  .form-button {
+    background-color: var(--primary);
+    color: var(--cyan);
+    transition: 0.5s;
+    &:hover {
+      opacity: 0.8;
+      background-color: #4f2677;
+      color: var(--cyan);
+    }
+    &:focus {
+      box-shadow: 0px 0px 1px 5px #66339948;
+    }
+  }
 }
 
 @media (max-width: 800px) {
-	.login {
-		.container {
-			.row {
-				padding: 0px 15px;
-				.col-lg-8 {
-					position: relative;
-					display: none;
-				}
-				.col-lg-4 {
-					background: rgb(79 38 119 / 11%);
-					// box-shadow: 0px 4px 10px 1px #8972a01a;
-					backdrop-filter: blur(6px);
-					-webkit-backdrop-filter: blur(6px);
-					border-radius: 10px;
-					border: 1px solid rgb(255 255 255 / 7%);
-					padding: 20px 15px;
-					h2 {
-						text-align: center;
-					}
-					p {
-						font-size: 15px;
-					}
-				}
-			}
-		}
-	}
+  .login {
+    .container {
+      .row {
+        padding: 0px 15px;
+        .col-lg-8 {
+          position: relative;
+          display: none;
+        }
+        .col-lg-4 {
+          background: rgba(79, 38, 119, 11%);
+          // box-shadow: 0px 4px 10px 1px #8972a01a;
+          backdrop-filter: blur(6px);
+          -webkit-backdrop-filter: blur(6px);
+          border-radius: 10px;
+          border: 1px solid rgba(255, 255, 255, 7%);
+          padding: 20px 15px;
+          h2 {
+            text-align: center;
+          }
+          p {
+            font-size: 15px;
+          }
+        }
+      }
+    }
+  }
 }
