--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,5 +4,16 @@
   background-color: var(--primary);
   color: var(--cyan);
   display: block;
+	transition: 0.5s;
   width: 100%;
+	&:hover {
+		opacity: 0.8;
+		background-color: #4f2677;
+		color: var(--cyan);
+	}
+	&:focus {
+		box-shadow: 0px 0px 1px 5px #66339948;
+	}
 }
+// .form-button {
+// }
