--- a/sass/pages/_register.scss
+++ b/sass/pages/_register.scss
@@ -1,82 +1,90 @@
 .register {
-  height: 100vh;
-  background-color: #121212;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  color: var(--gray);
+	height: 100vh;
+	background-color: #121212;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	color: var(--gray);
 
-  .input-login {
-    background-color: #101010;
-    padding: 3px 15px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border-radius: 6px;
-    border: 2px solid rebeccapurple;
-    gap: 5px;
-    margin-top: 5px;
-    transition: 0.6s;
-    input {
-      border: none;
-      background-color: transparent;
-      padding: 5px 10px;
-      border: none;
-      outline: none;
-      width: 99%;
-      font-size: 16px;
-      color: var(--gray);
-      &[type="text"] ~ #toggle-password {
-        color: var(--primary);
-        background-color: #d9c6eb14;
-        border-radius: 50%;
-        transition: 0.6s ease;
-      }
-    }
-    i {
-      color: var(--gray);
-    }
-    #toggle-password {
-      cursor: pointer;
-      padding: 5px;
-      transition: 0.3s ease;
-    }
-    &:focus-within,
-    &:focus {
-      background-color: #8044bd0a;
-      box-shadow: 0px 0px 1px 5px #66339948;
-    }
-  }
+	.input-login {
+		background-color: #101010;
+		padding: 3px 15px;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		border-radius: 6px;
+		border: 2px solid rebeccapurple;
+		gap: 5px;
+		margin-top: 5px;
+		transition: 0.6s;
+		input {
+			border: none;
+			background-color: transparent;
+			padding: 5px 10px;
+			border: none;
+			outline: none;
+			width: 99%;
+			font-size: 16px;
+			color: var(--gray);
+			&[type="text"] ~ #toggle-password {
+				color: var(--primary);
+				background-color: #d9c6eb14;
+				border-radius: 50%;
+				transition: 0.6s ease;
+			}
+		}
+		i {
+			color: var(--gray);
+		}
+		#toggle-password {
+			cursor: pointer;
+			padding: 5px;
+			transition: 0.3s ease;
+		}
+		&:focus-within,
+		&:focus {
+			background-color: #8044bd0a;
+			box-shadow: 0px 0px 1px 5px #66339948;
+		}
+	}
 
-  .form-register {
-    background-color: rgba(79, 38, 119, 0.12);
-    backdrop-filter: blur(6px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    padding: 20px 15px;
-    h2 {
-      text-align: center;
-    }
+	.content-form-register {
+		background-color: rgba(79, 38, 119, 0.12);
+		backdrop-filter: blur(6px);
+		border-radius: 10px;
+		border: 1px solid rgba(255, 255, 255, 0.1);
+		padding: 20px 15px;
+		h2 {
+			text-align: center;
+		}
 
-    form {
-      .form-group {
-      }
-    }
-  }
+		form {
+			.form-group {
+			}
+		}
+	}
+	.form-next-page {
+		display: none;
+	}
+	.form-step-1 {
+	}
+	.form-step-2 {
+		display: none;
+	}
 }
 
 @media (max-width: 991px) {
-  .register {
-    .container {
-      .row {
-        margin: 10px;
-        .col-lg-6 {
-          img {
-            display: none;
-          }
-        }
-      }
-    }
-  }
+	.register {
+		.container {
+			.row {
+				margin: 10px;
+				.col-lg-6 {
+					img {
+						display: none;
+					}
+				}
+			}
+		}
+	}
 }
