--- a/template/css/style.css
+++ b/template/css/style.css
@@ -14,7 +14,6 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format("woff2");
 }
-
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
@@ -22,7 +21,6 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format("woff2");
 }
-
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
@@ -30,7 +28,6 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format("woff2");
 }
-
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
@@ -38,7 +35,6 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format("woff2");
 }
-
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
@@ -46,7 +42,6 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format("woff2");
 }
-
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
@@ -54,7 +49,6 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format("woff2");
 }
-
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
@@ -62,7 +56,6 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format("woff2");
 }
-
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
@@ -70,7 +63,6 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format("woff2");
 }
-
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -86,30 +78,26 @@ header {
   z-index: 10;
   width: 100%;
 }
-
 header.fixed-top {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   height: 80px;
-  -webkit-box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0);
-          box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0);
+  -webkit-box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
   background-color: var(--black);
   padding: 0;
 }
-
 header .logo {
   text-decoration: none;
 }
-
 header .logo:hover {
   color: var(--primary);
   text-decoration: none;
   -webkit-transition: 0.35s all ease-in-out;
   transition: 0.35s all ease-in-out;
 }
-
 header .logo h1 {
   font-size: 30px;
   margin: 0;
@@ -117,12 +105,10 @@ header .logo h1 {
   letter-spacing: 0.8px;
   color: var(--cyan);
 }
-
 header .navbar {
   padding: 0;
   margin: 0;
 }
-
 header .navbar ul {
   padding: 0;
   margin: 0;
@@ -131,17 +117,14 @@ header .navbar ul {
   display: flex;
   gap: 14px;
 }
-
 header .navbar ul li {
   list-style: none;
 }
-
 header .navbar ul li a {
   text-decoration: none;
   color: var(--cyan);
   font-weight: 600;
 }
-
 header .navbar ul li a:hover {
   text-decoration: none;
   color: #bb86fc;
@@ -149,12 +132,30 @@ header .navbar ul li a:hover {
   transition: 0.35s all ease-in-out;
 }
 
-@use "../base/variables";
+:root {
+  --primary: #8144bd;
+  --secondary: #00c9a7;
+  --black: #222;
+  --cyan: #f5f5f5;
+  --gray: #c2c0c0;
+}
+
 .primary-btn {
   background-color: var(--primary);
   color: var(--cyan);
   display: block;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   width: 100%;
+}
+.primary-btn:hover {
+  opacity: 0.8;
+  background-color: #4f2677;
+  color: var(--cyan);
+}
+.primary-btn:focus {
+  -webkit-box-shadow: 0px 0px 1px 5px rgba(102, 51, 153, 0.2823529412);
+          box-shadow: 0px 0px 1px 5px rgba(102, 51, 153, 0.2823529412);
 }
 
 /*
@@ -168,12 +169,10 @@ header .navbar ul li a:hover {
   padding: 64px 0px;
   position: relative;
 }
-
 #banner .banner-home img {
   width: 98%;
   animation: up-down 2s ease-in-out infinite alternate-reverse both;
 }
-
 #banner .container .row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -182,7 +181,6 @@ header .navbar ul li a:hover {
       -ms-flex-align: center;
           align-items: center;
 }
-
 #banner h2 {
   margin: 0 0 10px 0;
   font-size: 46px;
@@ -190,13 +188,11 @@ header .navbar ul li a:hover {
   line-height: 56px;
   color: var(--cyan);
 }
-
 #banner p {
   color: var(--cyan);
   font-size: 20px;
   margin-top: 16px;
 }
-
 #banner .btn-call-to-action {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -207,7 +203,6 @@ header .navbar ul li a:hover {
   gap: 32px;
   margin-top: 32px;
 }
-
 #banner .btn-call-to-action a {
   color: var(--cyan);
   text-decoration: none;
@@ -215,7 +210,6 @@ header .navbar ul li a:hover {
   text-shadow: 1px 1px 1px #000;
   letter-spacing: 1px;
 }
-
 #banner .btn-call-to-action a:first-child {
   font-size: 15px;
   font-weight: 600;
@@ -232,12 +226,10 @@ header .navbar ul li a:hover {
   border: 2px solid rgba(255, 255, 255, 0.1);
   text-decoration: none;
 }
-
 #banner .box-icons {
   margin-top: 60px;
   padding-bottom: 60px;
 }
-
 #banner .box-icons::before {
   content: "";
   position: absolute;
@@ -247,20 +239,18 @@ header .navbar ul li a:hover {
   height: calc(20% + 20px);
   background-color: #fff;
 }
-
 #banner .box-icons .box-content {
   padding: 40px 30px;
   position: relative;
   background: #925bd7;
-  -webkit-box-shadow: 0 0 29px 0 black;
-          box-shadow: 0 0 29px 0 black;
+  -webkit-box-shadow: 0 0 29px 0 rgba(0, 0, 0, 0.08);
+          box-shadow: 0 0 29px 0 rgba(0, 0, 0, 0.08);
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   border-radius: 8px;
   z-index: 1;
   text-align: center;
 }
-
 #banner .box-icons .box-content i {
   margin-bottom: 24px;
   padding-top: 10px;
@@ -271,14 +261,12 @@ header .navbar ul li a:hover {
   line-height: 1;
   color: rgba(255, 255, 255, 0.6);
 }
-
 #banner .box-icons .box-content h4 {
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 24px;
   color: var(--cyan);
 }
-
 #banner .box-icons .box-content:hover {
   background: #7132bd;
   cursor: pointer;
@@ -306,7 +294,6 @@ header .navbar ul li a:hover {
             transform: translateY(-10px);
   }
 }
-
 /*
 * Página - Login
 ------------------------*/
@@ -328,7 +315,6 @@ header .navbar ul li a:hover {
           justify-content: center;
   color: var(--gray);
 }
-
 .login .input-login {
   background-color: #101010;
   padding: 3px 15px;
@@ -349,7 +335,6 @@ header .navbar ul li a:hover {
   -webkit-transition: 0.6s;
   transition: 0.6s;
 }
-
 .login .input-login input {
   border: none;
   background-color: transparent;
@@ -360,33 +345,13 @@ header .navbar ul li a:hover {
   font-size: 16px;
   color: var(--gray);
 }
-
 .login .input-login i {
   color: var(--gray);
 }
-
 .login .input-login:focus-within, .login .input-login:focus {
-  background-color: #8044bd0a;
-  -webkit-box-shadow: 0px 0px 1px 5px #66339948;
-          box-shadow: 0px 0px 1px 5px #66339948;
-}
-
-.login .form-button {
-  background-color: var(--primary);
-  color: var(--cyan);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.login .form-button:hover {
-  opacity: 0.8;
-  background-color: #4f2677;
-  color: var(--cyan);
-}
-
-.login .form-button:focus {
-  -webkit-box-shadow: 0px 0px 1px 5px #66339948;
-          box-shadow: 0px 0px 1px 5px #66339948;
+  background-color: rgba(128, 68, 189, 0.0392156863);
+  -webkit-box-shadow: 0px 0px 1px 5px rgba(102, 51, 153, 0.2823529412);
+          box-shadow: 0px 0px 1px 5px rgba(102, 51, 153, 0.2823529412);
 }
 
 @media (max-width: 800px) {
@@ -398,11 +363,11 @@ header .navbar ul li a:hover {
     display: none;
   }
   .login .container .row .col-lg-4 {
-    background: #4f2677;
+    background: rgba(79, 38, 119, 0.11);
     backdrop-filter: blur(6px);
     -webkit-backdrop-filter: blur(6px);
     border-radius: 10px;
-    border: 1px solid white;
+    border: 1px solid rgba(255, 255, 255, 0.07);
     padding: 20px 15px;
   }
   .login .container .row .col-lg-4 h2 {
@@ -412,7 +377,6 @@ header .navbar ul li a:hover {
     font-size: 15px;
   }
 }
-
 .register {
   height: 100vh;
   background-color: #121212;
@@ -431,7 +395,6 @@ header .navbar ul li a:hover {
           justify-content: center;
   color: var(--gray);
 }
-
 .register .input-login {
   background-color: #101010;
   padding: 3px 15px;
@@ -452,7 +415,6 @@ header .navbar ul li a:hover {
   -webkit-transition: 0.6s;
   transition: 0.6s;
 }
-
 .register .input-login input {
   border: none;
   background-color: transparent;
@@ -463,33 +425,28 @@ header .navbar ul li a:hover {
   font-size: 16px;
   color: var(--gray);
 }
-
-.register .input-login input[type="text"] ~ #toggle-password {
+.register .input-login input[type=text] ~ #toggle-password {
   color: var(--primary);
-  background-color: #d9c6eb14;
+  background-color: rgba(217, 198, 235, 0.0784313725);
   border-radius: 50%;
   -webkit-transition: 0.6s ease;
   transition: 0.6s ease;
 }
-
 .register .input-login i {
   color: var(--gray);
 }
-
 .register .input-login #toggle-password {
   cursor: pointer;
   padding: 5px;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
-
 .register .input-login:focus-within, .register .input-login:focus {
-  background-color: #8044bd0a;
-  -webkit-box-shadow: 0px 0px 1px 5px #66339948;
-          box-shadow: 0px 0px 1px 5px #66339948;
+  background-color: rgba(128, 68, 189, 0.0392156863);
+  -webkit-box-shadow: 0px 0px 1px 5px rgba(102, 51, 153, 0.2823529412);
+          box-shadow: 0px 0px 1px 5px rgba(102, 51, 153, 0.2823529412);
 }
-
-.register .form-register {
+.register .content-form-register {
   background-color: rgba(79, 38, 119, 0.12);
   -webkit-backdrop-filter: blur(6px);
           backdrop-filter: blur(6px);
@@ -497,9 +454,14 @@ header .navbar ul li a:hover {
   border: 1px solid rgba(255, 255, 255, 0.1);
   padding: 20px 15px;
 }
-
-.register .form-register h2 {
+.register .content-form-register h2 {
   text-align: center;
+}
+.register .form-next-page {
+  display: none;
+}
+.register .form-step-2 {
+  display: none;
 }
 
 @media (max-width: 991px) {
@@ -510,7 +472,6 @@ header .navbar ul li a:hover {
     display: none;
   }
 }
-
 * {
   font-family: "Montserrat";
 }
@@ -523,10 +484,9 @@ header .navbar ul li a:hover {
   transition: 0.5s;
   font-weight: 500;
 }
-
 .link-primary:hover, .link-primary:active {
   opacity: 1;
   text-decoration: none;
-  background-color: #d9c6eb14;
+  background-color: rgba(217, 198, 235, 0.0784313725);
   color: #a258eb;
 }
